# pyo

./: .gitignore  ChangeLog  GUI.py  MANIFEST.in  README.md  TODO.md  html_man.py  manylinux-pre-build-script-i686.sh  manylinux-pre-build-script.sh  pyo.py  pyo64.py  pyproject.toml  setup.cfg  setup.py  start.py
demos/: BandSplit_demo.py  Biquad_demo.py  Disto_demo.py  Follower_demo.py  Freeverb_demo.py  Hilbert_demo.py  Input_demo.py  Noise_demo.py  Osc_demo.py  Sine_demo.py  Waveguide_demo.py  accord.aif  transparent.aif
deprecated/: pyo.py  release_builder_OSX.sh
doc/: Server.rst  build.py  conf.py  contents.rst  pyo.rst
doc-sphinx/: build.py
docs/: about.html  compiling.html  download.html  genindex.html  gettingstarted.html  index.html  objects.inv  perftips.html  search.html  searchindex.js  structure.html  winaudioinspect.html
documentation/: build.py
embedded/: m_pyo.h
examples/: chorus.py  convolution.py  curve_table.py  degrade.py  fft_cross.py  fft_filter.py  fft_gate.py  fft_morph.py  fft_spec.py  freqMod.py  get_example.py  granulation.py  granule.py  harmonizer.py  live_looper.py  matrix_test.py  melody_algo.py  midi_osc.maxpat  midictlscan.py  nuages.py  pulsar_synth.py  random_score.py  savefile.py  set_example.py  snap_example.py  snap_test.py  snd_2.aif  starttimeAndDuration.py  tablecopy.py  testMixer.py  test_oscbank.py  vocoder_lib.py  vocoder_main.py  xnoise_example.py
include/: ad_coreaudio.h  ad_jack.h  ad_portaudio.h  biquadmodule.h  dummymodule.h  fft.h  interpolation.h  matrixmodule.h  md_portmidi.h  noisemodule.h  oscmodule.h  oscreceivermodule.h  pvstreammodule.h  py2to3.h  pyomodule.h  servermodule.h  sinemodule.h  streammodule.h  tablemodule.h  vbap.h  wind.h
lib/: OSC.py  _core.py  bandsplitter.py  control.py  effects.py  hilbert.py  input.py  midi.py  pan.py  pattern.py  pypattern.py  server.py  sfplayer.py  table.py  trigger.py
pyo/: __init__.py  _linux_wheel_fix_symlinks.py
pyo64/: __init__.py
pyodemos/: BandSplit_demo.py  Clip_demo.py  Delay_demo.py  Disto_demo.py  Follower_demo.py  Freeverb_demo.py  Hilbert_demo.py  Input_demo.py  Noise_demo.py  Waveguide_demo.py
pyolib/: OSC.py  _core.py  _maps.py  _tkwidgets.py  _widgets.py  _wxwidgets.py  analysis.py  arithmetic.py  bandsplitter.py  control.py  controls.py  dynamics.py  effects.py  expression.py  filters.py  fourier.py  generators.py  hilbert.py  hrtf.py  input.py  listener.py  matrix.py  matrixprocess.py  midi.py  opensndctrl.py  opensoundcontrol.py  osc.py  pan.py  pattern.py  phasevoc.py  players.py  pypattern.py  randoms.py  server.py  sfplayer.py  table.py  tableprocess.py  tables.py  trigger.py  triggers.py  (+2 more)
release-notes/: pyo_release_0.8.1.txt  pyo_release_0.8.2.txt  pyo_release_0.8.4.txt  pyo_release_0.8.5.txt  pyo_release_0.8.6.txt  (+11 more)
(+1615 files in other folders)
